Added in two new databases, fixtures and tables

--- a/Premier-League/server/model-config.json
+++ b/Premier-League/server/model-config.json
@@ -35,5 +35,13 @@
   "teams": {
     "dataSource": "mysqlDs",
     "public": true
+  },
+  "table": {
+    "dataSource": "mysqlDs",
+    "public": true
+  },
+  "fixtures": {
+    "dataSource": "mysqlDs",
+    "public": true
   }
 }
